--- a/ios/Smokalyzer/Smokalyzer-Info.plist
+++ b/ios/Smokalyzer/Smokalyzer-Info.plist
@@ -22,6 +22,17 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
+	<key>LSEnvironment</key>
+	<dict>
+		<key>MallocStackLogging</key>
+		<true/>
+		<key>MallocStackLoggingNoCompact</key>
+		<true/>
+		<key>NSDebugEnabled</key>
+		<true/>
+		<key>NSZombieEnabled</key>
+		<true/>
+	</dict>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIMainStoryboardFile</key>
